[package]
name = "mime2"
version = "0.1.0"
edition = "2021"
description = "MIME types that are up to date."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/mime2"
documentation = "https://docs.rs/mime2/"
readme = "./README.md"

[dependencies]
http = { version = "1.1.0", optional = true }

[build-dependencies]
csv = "1.3.0"
quote = "1.0.37"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]