[package]
name = "mime2"
version = "0.1.5"
edition = "2021"
description = "MIME types that are up to date."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/mime2"
keywords = ["mime", "media-extensions", "media-types"]
documentation = "https://docs.rs/mime2/"
readme = "./README.md"

[dependencies]
http = { version = "1.1.0", optional = true }

[build-dependencies]
csv = "1.3.0"
quote = "1.0.37"
proc-macro2 = "1.0.87"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]